@@ -1,3 +1,8 @@
+2008-08-31  Alexander Fehr  <pizzapunk gmail com>
+
+  * pidgin-2.5.1-1:
+  New upstream release.
+
 2008-08-25  Alexander Fehr  <pizzapunk gmail com>
 
   * pidgin-2.5.0-2:
